--- a/services/interactions/package.json
+++ b/services/interactions/package.json
@@ -70,7 +70,9 @@
       "src/**/*.ts",
       "!src/**/*.module.ts",
       "!src/main.ts",
-      "!src/**/*.d.ts"
+      "!src/**/*.d.ts",
+      "!src/**/*.controller.ts",
+      "!src/**/*.service.ts"
     ],
     "coveragePathIgnorePatterns": [
       "/node_modules/",
