--- a/.env.template
+++ b/.env.template
@@ -11,3 +11,5 @@ MEDIA_SERVICE_PORT=9020
 MINIO_PASSWORD=
 INTERACTIONS_SERVICE_PORT=9030
 MONGO_EXPRESS_INTERACTIONS_PORT=9031
+RABBITMQ_USER=admin
+RABBITMQ_PASS=
