--- a/docs/openAPI/openapi/interactions.yaml
+++ b/docs/openAPI/openapi/interactions.yaml
@@ -1,6 +1,6 @@
 openapi: 3.0.1
 info:
-  title: EvenToNight - Events API
+  title: EvenToNight - Interactions API
   version: 1.0.0
 paths:
   /users/{userId}:
