--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -148,10 +148,6 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
-      
-      - name: Fetch previous commit
-        run: |
-          git fetch origin ${{ github.event.before }} --depth=1 || echo "⚠️ Could not fetch previous commit"
 
       - name: Log in to GitHub Container Registry
         uses: docker/login-action@v3
@@ -160,26 +156,10 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Find all modified service directories with Dockerfiles
+      - name: Find all modified directories with Dockerfiles
         id: services
         run: |
-          modified_dirs=$(
-            git diff --name-only ${{ github.event.before }} ${{ github.sha }} \
-            | grep '^services/' \
-            | awk -F/ '{print "services/"$2}' \
-            | sort -u
-          )
-          dirs=""
-          echo "$modified_dirs"
-          for dir in $modified_dirs; do
-            if [ -f "$dir/Dockerfile" ]; then
-              dirs="$dirs $dir"
-            fi
-          done
-
-          echo "Found modified service dirs with Dockerfiles:"
-          echo "$dirs"
-
+          dirs=$(./scripts/findDirsWithDockerfile.sh "${{ github.event.before }}" "${{ github.sha }}")
           echo "dirs=$dirs" >> $GITHUB_OUTPUT
 
       - name: Get latest GitHub Release tag
