refactor(review): extract submitReviewDialog component

--- a/services/frontend/Dockerfile
+++ b/services/frontend/Dockerfile
@@ -2,7 +2,7 @@ FROM node:25-alpine3.22 AS builder
 WORKDIR /home/app
 
 COPY ./services/frontend/package.json ./
-RUN npm install
+RUN npm install --include=dev
 COPY ./services/frontend .
 
 ENV NODE_ENV=production
