--- a/docs/openAPI/openapi/events.yaml
+++ b/docs/openAPI/openapi/events.yaml
@@ -67,7 +67,7 @@ paths:
               schema:
                 type: object
                 properties:
-                  id_event:
+                  eventId:
                     type: string
                     description: Unique identifier of the created event
                     example: "evt_789xyz"
@@ -120,7 +120,7 @@ paths:
                     items:
                       type: object
                       properties:
-                        id_event:
+                        eventId:
                           type: string
                           description: Event ID
                         title:
@@ -490,7 +490,7 @@ paths:
       tags:
         - Event Query API
   
-  /{id_event}/poster:
+  /{eventId}/poster:
     post:
       summary: Update event poster
       description: Updates the poster image for a specific event. The event must exist before updating its poster.
@@ -499,7 +499,7 @@ paths:
           description: Events service (local development)
       parameters:
         - in: path
-          name: id_event
+          name: eventId
           required: true
           schema:
             type: string
@@ -555,7 +555,7 @@ paths:
       tags:
         - Event Query API
 
-  /{id_event}:
+  /{eventId}:
     get:
       summary: Get event details by ID
       description: Retrieves detailed information about a specific event.
@@ -565,7 +565,7 @@ paths:
         - url: https://events.eventonight.site
           description: Events service (production)
       parameters:
-        - name: id_event
+        - name: eventId
           in: path
           required: true
           description: The ID of the event to retrieve
@@ -580,7 +580,7 @@ paths:
               schema:
                 type: object
                 properties:
-                  id_event:
+                  eventId:
                     type: string
                     description: Event ID
                   title:
@@ -651,7 +651,7 @@ paths:
                     description: IDs of the collaborators (if any)
                     nullable: true
               example:
-                id_event: "event-uuid-123"
+                eventId: "event-uuid-123"
                 title: "Summer Music Festival"
                 description: "An amazing summer music festival"
                 poster: "poster-123.jpg"
@@ -697,12 +697,12 @@ paths:
 
         If status is updated to "PUBLISHED", all field are required except `id_collaborators` and `poster`.
         
-        **Note:** To update the poster, use the separate `POST /poster/{id_event}` endpoint.
+        **Note:** To update the poster, use the separate `POST /poster/{eventId}` endpoint.
       servers:
         - url: http://localhost:9010
           description: Events service (local development)
       parameters:
-        - name: id_event
+        - name: eventId
           in: path
           required: true
           description: The ID of the event to update
@@ -870,7 +870,7 @@ paths:
         - url: http://localhost:9010
           description: Events service (local development)
       parameters:
-        - name: id_event
+        - name: eventId
           in: path
           required: true
           description: The ID of the event to delete
